Hide marquee overflow

--- a/site/src/components/Announcement.astro
+++ b/site/src/components/Announcement.astro
@@ -19,6 +19,7 @@ const { announcement } = Astro.props;
     background-color: var(--yellow-100);
     border: 1px solid var(--yellow-300);
     padding-block: 1rem;
+    overflow-x: hidden;
 
     :global([data-theme='dark']) & {
       background-color: transparent;
