--- a/site/src/layouts/wrapper.astro
+++ b/site/src/layouts/wrapper.astro
@@ -65,7 +65,7 @@ const t =
 
     <title>{t}</title>
     <meta name="Description" content={metadesc} />
-    <meta name="theme-color" content="#1a73e8" />
+    <meta name="theme-color" content="#1967d2" />
     <link rel="sitemap" href="/sitemap-index.xml" />
     {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
     <link rel="icon" type="image/png" href="ix://icons/favicon.png" />
