--- a/site/src/sass/global.scss
+++ b/site/src/sass/global.scss
@@ -7,6 +7,7 @@
 @import 'components/reset';
 @import 'components/icon';
 @import 'components/typography';
+@import 'components/table';
 @import 'components/a11y';
 @import 'components/pre';
 @import 'components/body';
