--- a/site/src/pages/[lang]/posts/[page].astro
+++ b/site/src/pages/[lang]/posts/[page].astro
@@ -57,7 +57,7 @@ const hero = {
   title: post.title,
   theme: post.theme,
   form: 'header',
-  media: post.hero,
+  media: post.hero.youtube ? null : post.hero?.image,
   cta: {
     text: microcopy.actions.back.replace('((a))', 'News'), // TODO: Replace with proper data pull from CMS
     url: `/${locale.code}/news`,
@@ -71,6 +71,8 @@ const authors = {
 };
 
 const toc = buildTOC(post.body);
+
+console.log(hero);
 ---
 
 <Article title={post.title} metadesc={post.description} microcopy={microcopy}>
@@ -79,12 +81,12 @@ const toc = buildTOC(post.body);
   </Fragment>
   <!-- YouTube embed -->
   {
-    hero.media?.youtube && (
+    post.hero?.youtube && (
       <YouTube
         client:load
-        slot={hero.media?.youtube && 'hero'}
-        id={hero.media?.youtube}
-        alt={`YouTube ${hero.media?.youtube}`}
+        slot={post.hero?.youtube && 'hero'}
+        id={post.hero?.youtube.id}
+        alt={`YouTube ${post.hero?.youtube.id}`}
         label={microcopy.actions.loadVideo}
       />
     )
