Improve accessibility of table headers when collapsed

--- a/site/src/sass/components/_table.scss
+++ b/site/src/sass/components/_table.scss
@@ -43,7 +43,12 @@ table {
     }
 
     thead tr {
-      display: none;
+      clip-path: inset(50%);
+      height: 1px;
+      overflow: hidden;
+      position: absolute;
+      white-space: nowrap;
+      width: 1px;
     }
 
     tbody tr {
