--- a/site/src/sass/components/_typography.scss
+++ b/site/src/sass/components/_typography.scss
@@ -137,12 +137,9 @@ $section-block-margin: 3.75rem;
   // Long-form type styling
   /* stylelint-disable-next-line selector-max-compound-selectors */
   *
-    + *:not(:empty)
-    :not(.header-anchor--wrapper)
-    :not(dd)
-    :not(.stat)
-    :not(td):not(dl div)
-    :not(dl),
+    + *:not(:empty):not(.header-anchor--wrapper):not(dd):not(.stat):not(td):not(
+      dl div
+    ):not(dl),
   * + astro-island > *:not(:empty) {
     margin-top: 1em;
   }
@@ -173,8 +170,12 @@ $section-block-margin: 3.75rem;
     }
   }
 
-  dl {
+  dl:not(.stats) {
     margin-top: -4rem;
+  }
+
+  dl:not(.stats):first-child {
+    margin-top: -5rem;
   }
 
   dl > div {
