--- a/site/src/components/Release.astro
+++ b/site/src/components/Release.astro
@@ -222,15 +222,26 @@ if (single) {
     padding-top: 0;
   }
 
+  details {
+    appearance: none;
+    position: relative;
+  }
+
   summary {
     list-style: none;
     display: grid;
     grid-template-columns: 1fr 1rem;
     gap: 0;
+
+    &::-webkit-details-marker {
+      display: none;
+    }
   }
 
   .details-marker {
     fill: currentColor;
+    height: 1rem;
+    width: 1rem;
 
     [open] & {
       transform: rotate(90deg);
