Change anchor from codegen to generator

--- a/site/src/pages/[lang]/add-to-chromebook-badge.astro
+++ b/site/src/pages/[lang]/add-to-chromebook-badge.astro
@@ -71,7 +71,7 @@ const l = localizations.map((lc) => {
           <CTA
             cta={{
               text: intro.cta,
-              url: '#codegen',
+              url: '#generator',
               type: 'high',
               inline: true,
             }}
@@ -124,7 +124,7 @@ const l = localizations.map((lc) => {
         )
       }
     </section>
-    <section id="codegen" class="guidelines--codegen wrapper--padded">
+    <section id="generator" class="guidelines--codegen wrapper--padded">
       <BadgeGenerator
         {codegen}
         required={microcopy.actions.required}
