Make search wrapper grow-able

--- a/site/src/pages/[lang]/search.astro
+++ b/site/src/pages/[lang]/search.astro
@@ -49,7 +49,7 @@ const { locale } = microcopy;
 <style lang="scss">
   .wrapper {
     background-color: var(--grey-100);
-    min-height: 100%;
+    flex-grow: 1;
   }
 
   .search-wrapper {
